# onnxruntime_cpp

./: .gitignore  CMakeLists.txt  README.md  gpu_occupier.py  inference_pipeline.cpp  inference_pipeline.h  main.cpp  pca_visualizer.py
florence2_ocr_finetune/: README.md  evaluate.py  inference.py  requirements.txt  train.py
florence2_ocr_finetune/config/: training_config.yaml
florence2_ocr_finetune/data/: dataset.py  transforms.py
florence2_ocr_finetune/docs/: custom_encoder_guide.md
florence2_ocr_finetune/examples/: custom_vision_encoder.py
florence2_ocr_finetune/models/: florence2_wrapper.py  vision_encoders.py
